# view

./: .gitignore  AGENTS.md  README.md  bunfig.toml  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: build.yml
docs/: agentic-development.md  research-otty-terminal.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard_paste.rs  code_search.rs  git_commit_details.rs  git_commit_details_tests.rs  git_commit_push.rs  git_commit_push_test_support.rs  git_commit_push_tests.rs  git_history_ops.rs  git_history_ops_tests.rs  git_log_tracking_tests.rs  git_pathspec.rs  git_remote.rs  git_remote_tests.rs  git_restore.rs  git_restore_tests.rs  git_stash.rs  git_stash_tests.rs  git_status.rs  git_tag.rs  git_tag_tests.rs  git_test_evidence.rs  git_tracking.rs  git_write.rs  git_write_pathspec_tests.rs  git_write_tests.rs  lib.rs  main.rs  project_file_ops.rs  project_file_ops_tests.rs  run_targets.rs  wsl.rs
src-tauri/src/clipboard_paste/: files.rs  target.rs  tests.rs  text_paths.rs
src/components/: AppTitleBar.tsx  CommandPanel.tsx  DiffPanel.tsx  LoadingRows.tsx  PreviewTabBar.tsx  PreviewTabItem.tsx  ProjectRail.tsx  ProjectSideRail.tsx  ProjectSwitcherPopover.tsx  ProjectTreeTitle.tsx  PullChoiceDialog.tsx  RailDockOverlay.tsx  RailSlots.tsx  ResizeHandle.tsx  RunPanel.tsx  SettingsPage.tsx  SettingsWindowApp.tsx  TabContextMenu.tsx  TerminalPanel.tsx  TreeContextMenu.tsx  TreePanel.test.js  TreePanel.tsx  TreePanelChrome.tsx  TreePanelContextMenuHost.tsx  WindowControls.tsx  treeGitContextMenuActions.test.js  treeGitContextMenuActions.tsx  treePanelData.test.js  treePanelData.ts  treePanelGitDecorations.test.js  treePanelGitDecorations.ts  treePanelModelReset.ts  treePanelPointer.ts  treePanelSelection.test.js  treePanelSelection.ts  treePanelTheme.test.js  treePanelTheme.ts  useTreePanelData.ts  useTreePanelInputHandlers.ts
src/hooks/: gitWriteAvailability.ts  previewPaneHookTypes.ts  repositoryRemotePollingBoundary.test.js  repositoryWorkspaceDataBoundary.test.js  saveDirtyDraftBeforeStage.ts  useAppKeyboardShortcuts.ts  useAppSettingsState.ts  useCommandPanel.ts  useCommitDetails.ts  useEditorDrafts.ts  useFileRunTargets.ts  useGitActions.ts  useGitChangeActions.ts  useGitFileActions.ts  useGitWriteActions.ts  useGitWriteGuard.ts  usePanelResizeActive.ts  usePanelResizeDeferredValue.ts  usePreviewPaneCloseActions.ts  usePreviewPaneData.ts  usePreviewPaneDirtyGuard.ts  usePreviewPanes.ts  (+20 more)
(+195 files in other folders)
