[package]
name = "view"
version = "0.1.0"
description = "A desktop Git diff viewer"
authors = ["like"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "view_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fff-search = "0.9.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
portable-pty = "0.9.0"
tungstenite = "0.24"
alacritty_terminal = "0.25.0"
