[package]
name = "view"
version = "0.1.0"
description = "A desktop Git diff viewer"
authors = ["like"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85"

[lib]
name = "view_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = { version = "3.6", features = ["wayland-data-control"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdb = "0.23.0"
fff-search = "0.9.4"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
portable-pty = "0.9.0"
tungstenite = "0.24"
alacritty_terminal = "0.25.0"
unicode-segmentation = "1.12"
unicode-width = "0.2"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
ast-grep-core = "0.44.0"
ast-grep-config = "0.44.0"
ast-grep-language = { version = "0.44.0", default-features = false, features = ["tree-sitter-go", "tree-sitter-html", "tree-sitter-javascript", "tree-sitter-rust", "tree-sitter-typescript"] }
ignore = "0.4.26"
